using System;

namespace POOI_Module09_PreparationCours.V2
{
    public abstract class FormeGeometrique
    {
        public abstract void Dessiner();

        public abstract double CalculerAire();
    }
}